     dubbed "Sliding right into disaster".  For details see
     <https://eprint.iacr.org/2017/627>.  [CVE-2017-7526] [also in 1.7.8]


 * Interface changes relative to the 1.7.0 release:
   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   GCRYCTL_REINIT_SYSCALL_CLAMP    NEW macro.
   gcry_get_config                 NEW function.
   gcry_md_info                    DEPRECATED.


 * Release dates of 1.7.x versions:
   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   Version 1.7.8 (2017-06-29)  [C21/A1/R8]
   Version 1.7.7 (2017-06-02)  [C21/A1/R7]
   Version 1.7.6 (2017-01-18)  [C21/A1/R6]
   Version 1.7.5 (2016-12-15)  [C21/A1/R5]
   Version 1.7.4 (2016-12-09)  [C21/A1/R4]


Noteworthy changes in version 1.7.3 (2016-08-17)  [C21/A1/R3]
------------------------------------------------

 * Bug fixes:

   - Fix critical security bug in the RNG [CVE-2016-6313].  An
     attacker who obtains 580 bytes from the standard RNG can
     trivially predict the next 20 bytes of output.  Problem
     detected by Felix Dörre and Vladimir Klebanov, KIT.

   - Fix building of some asm modules with older compilers and CPUs.

 * Performance:

   - ARMv8/AArch32 improvements for AES, GCM, SHA-256, and SHA-1.


Noteworthy changes in version 1.7.2 (2016-07-14)  [C21/A1/R2]
------------------------------------------------

 * Bug fixes:

   - Fix setting of the ECC cofactor if parameters are specified.

   - Fix memory leak in the ECC code.

   - Remove debug message about unsupported getrandom syscall.

   - Fix build problems related to AVX use.

   - Fix bus errors on ARM for Poly1305, ChaCha20, AES, and SHA-512.

 * Internal changes:

   - Improved fatal error message for wrong use of gcry_md_read.

   - Disallow symmetric encryption/decryption if key is not set.


Noteworthy changes in version 1.7.1 (2016-06-15)  [C21/A1/R1]
------------------------------------------------

 * Bug fixes:

   - Fix ecc_verify for cofactor support.

   - Fix portability bug when using gcc with Solaris 9 SPARC.
