@@ -72,6 +72,7 @@ Noteworthy changes in version 1.8.0 (unreleased)  [C21/A1/R_]
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    GCRYCTL_REINIT_SYSCALL_CLAMP    NEW macro.
    gcry_get_config                 NEW function.
+   gcry_mpi_point_copy             NEW function.
    gcry_md_info                    DEPRECATED.
 
 
